<resources>
    <string name="app_name">My Browser</string>

    <string name="search_or_enter_url">Search or Enter URL</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="album">Album</string>

    <string name="result">Result</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="back">Back</string>
    <string name="copied">Copied to Clipboard</string>
    <string name="cannot_detect_qr">Cannot detect QRCode from that Image</string>

    <string name="news">News</string>
    <string name="done">Done</string>
    <string name="manage_cards">Manage Cards</string>
</resources>
