<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#99000000">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:src="@drawable/hd_btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/scan_qr_code"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tvAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:padding="16dp"
            android:text="@string/album"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/actionBar"
        android:layout_margin="?actionBarSize"
        android:src="@drawable/hd_btn_flash" />

    <RelativeLayout
        android:id="@+id/rlResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cc000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/hd_bg_opacity"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/hd_bg_opacity"
                android:text="@string/copy"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="24dp"
                android:background="@drawable/hd_bg_opacity"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>